--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,7 @@
 @import '~antd/dist/antd.css';
 
 .header{
-  background-color: #FFF;
+  background-color: #548CA8;
 }
 .header2{
   background-color: #006989;
