--- a/src/styles/bill.css
+++ b/src/styles/bill.css
@@ -1,5 +1,5 @@
 .fondo-cuenta{
-    background-image: url("../images/logo.svg") !important;
+    background-image: url("../images/iglesia_interna.jpg") !important;
     background-size: cover;
 }
 .ant-card-cover{
