--- a/src/styles/foro.css
+++ b/src/styles/foro.css
@@ -2,7 +2,7 @@
 
 .fondo-foros {
     padding: 30px;
-    background-image: url("../images/logo.svg");
+    background-image: url("../images/iglesia_interna.jpg");
     background-size: cover;
     height: auto;
 }
