--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,5 +1,5 @@
 .imagen-fondo-inicio{
-    background-image: url("../images/logo.svg");
+    background-image: url("../images/iglesia_interna.jpg");
     background-size: cover;
     height: 400px;
 }
