--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -12,6 +12,6 @@
 
 }
 .fondo-login {
-    background-image: url("../images/logo.svg");
+    background-image: url("../images/iglesia_interna.jpg");
     background-size: cover;
 }
