--- a/src/styles/registrarAsiento.css
+++ b/src/styles/registrarAsiento.css
@@ -1,5 +1,5 @@
 .background-register-seat{
-    background-image: url("../images/logo.svg");
+    background-image: url("../images/iglesia_interna.jpg");
     background-size: cover;
 }
 
